# gridrival_ai

./: .gitignore  README.md  pyproject.toml
examples/: australia.py  bahrain.py  china.py  different_odds_sprint.ipynb  emilia romagna.py  example.py  japan.py  winning_odds_race.ipynb
gridrival_ai/: __init__.py  team.py
gridrival_ai/tests/: test_team.py
src/gridrival_ai/: __init__.py  contracts.py  data_ingestion.py  optimization.py  position_probabilities.py  salary.py  scoring.py  team.py
src/gridrival_ai/data/: __init__.py  fantasy.py  ingestion.py  models.py  reference.py
src/gridrival_ai/examples/: example.py  grid_rival_optimization_guide.ipynb
src/gridrival_ai/f1/: __init__.py  core.py  data.py
src/gridrival_ai/optimization/: __init__.py  expected_points.py  optimizer.py  team_optimizer.py  types.py
src/gridrival_ai/points/: __init__.py  calculator.py  components.py  constructor.py  distributions.py  driver.py
src/gridrival_ai/probabilities/: __init__.py  conversion.py  core.py  driver_distributions.py  factory.py  odds_structure.py  odds_to_probabilities.py  position_distribution.py  registry.py  types.py
src/gridrival_ai/probabilities/converters/: __init__.py  basic.py  cumulative.py  harville.py  odds_converter.py  power.py  ratio.py  shins.py
src/gridrival_ai/probabilities/distributions/: __init__.py  joint.py  position.py  race.py  session.py
src/gridrival_ai/probabilities/grid_creators/: __init__.py  base.py  cumulative.py  factory.py  harville.py
src/gridrival_ai/probabilities/normalizers/: __init__.py  base.py  factory.py  sinkhorn.py
src/gridrival_ai/probabilities/odds_converters/: __init__.py  base.py  basic.py  factory.py  power.py  ratio.py  shins.py
src/gridrival_ai/scoring/: __init__.py  _calculator.py  base.py  calculator.py  config.py  constants.py  engine.py  exceptions.py  types.py
src/gridrival_ai/utils/: driver_stats.py  odds_conversion.py
tests/: test_base.py  test_calculator.py  test_contracts.py  test_core.py  test_data_ingestion.py  test_position_probabilities.py  test_salary.py  test_team.py  test_types.py
tests/converters/: test_basic.py  test_cumulative.py  test_harville.py  test_odds_converter.py  test_power.py  test_ratio.py  test_shins.py
tests/data/: test_fantasy.py  test_ingestion.py  test_models.py
tests/f1/: test_core.py
tests/optimization/: test_expected_points.py  test_optimizer.py  test_team_optimizer.py  test_types.py
tests/points/: test_calculator.py  test_components.py  test_constructor.py  test_distribution.py  test_driver.py
tests/probabilites/: test_factory.py
tests/probabilities/: __init__.py  test_conversion.py  test_core.py  test_distributions.py  test_driver_distributions.py  test_factory.py  test_normalizers.py  test_odds_converters.py  test_odds_structure.py  test_odds_to_probabilities.py  test_position_distributions.py  test_registry.py  test_types.py
tests/probabilities/grid_creators/: test_base.py  test_cumulative.py  test_harville.py
tests/scoring/: test_base.py  test_calculator.py  test_china_2025.py  test_config.py  test_engine.py  test_integration.py  test_types.py
tests/utils/: test_driver_stats.py  test_odds_conversion.py
