[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridrival_ai"
version = "0.1.0"
description = "F1 Fantasy League Optimizer for GridRival Contracts format"
readme = "README.md"
authors = [
    { name = "Pablo Forero", email = "github46@pabloforero.eu" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pulp>=2.7.0",  # For optimization
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 